# who-is-adam

./: .env.example  LICENSE  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
docs/: evidence-policy.md  implementation-checkpoints.md  operator-guide.md  product-proposal.md  skill-guide.md
docs/ko/: README.md  evidence-policy.md  implementation-checkpoints.md  operator-guide.md  product-proposal.md  skill-guide.md
skills/ralph/: SKILL.md
skills/who-is-adam/: SKILL.md
skills/who-is-adam/agents/: openai.yaml
skills/who-is-adam/references/: citation-verification.md  review-contract.md
skills/who-is-adam/scripts/: run_review.py
src/who_is_adam/: __init__.py  cli.py  config.py  models.py
src/who_is_adam/evidence/: arxiv.py  citation_consensus.py  citation_matching.py  citation_metadata.py  citation_verifier.py  citations.py  crossref.py  openalex.py  openreview.py  prior_work.py  semantic_scholar.py
src/who_is_adam/icml/: __init__.py  constants.py  desk_reject.py
src/who_is_adam/llm/: base.py
src/who_is_adam/output/: markdown.py  paths.py
src/who_is_adam/pdf/: extractor.py  ocr.py  structure.py
tests/: conftest.py  test_citations.py  test_deliberation.py  test_desk_reject.py  test_docs.py  test_orchestrator_refusal.py  test_orchestrator_success.py  test_output_paths.py  test_prior_work.py  test_prompt_injection.py  test_quality_gate.py  test_review_schema.py  test_skill_package.py  test_skill_wrapper.py
tests/fixtures/: build_fixtures.py
(+7 files in other folders)
